# ruler

./: .gitignore  Cargo.toml  LICENSE  README.md  poemcat  test.py  time.txt
src/: actix_server.rs  blob.rs  build.rs  bundle.rs  cache.rs  current.rs  data.rs  directory.rs  downloader.rs  executor.rs  file.rs  hash.rs  history.rs  internet.rs  language.rs  main.rs  memory.rs  metadata.rs  network.rs  packet.rs  piecemeal.rs  printer.rs  rule.rs  rulefile.rs  server.rs  sort.rs  station.rs  ticket.rs  uploader.rs  work.rs
src/downloader/: fake.rs  mod.rs  real.rs
src/system/: fake.rs  language.rs  mod.rs  permissions.rs  real.rs  util.rs
