[package]
name = "ruler"
version = "0.1.6"
authors = ["Peterson Trethewey <peterson@2-complex.com>"]
description = "A straight-forward, general-purpose build tool"
homepage = "https://rulerbuild.com"
repository = "https://github.com/2-complex/ruler"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
clap = "4.4.6"
clap_derive = "4.4.2"
toml = "0.5.6"
rust-crypto = "0.2.36"
base64 = "0.12.3"
multimap = "0.8.1"
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
lipsum = "0.7.0"
termcolor = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
execute = "0.2.11"
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["stream"] }
bytes = "1.4.0"
