[package]
name = "ruler"
version = "0.1.6"
authors = ["Peterson Trethewey <peterson@2-complex.com>"]
description = "A straight-forward, general-purpose build tool"
homepage = "https://rulerbuild.com"
repository = "https://github.com/2-complex/ruler"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
clap = "4.4.6"
clap_derive = "4.4.2"
toml = "0.5.6"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.25"
num-traits = "0.2.17"
num-bigint = "0.4"
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
lipsum = "0.9.0"
termcolor = "1.3.0"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
warp = "0.3.6"
execute = "0.2.12"
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["stream", "multipart"] }
bytes = "1.5.0"
tokio-util = "0.7.12"
